--- a/joine-admin/src/main/resources/i18n/messages.properties
+++ b/joine-admin/src/main/resources/i18n/messages.properties
@@ -14,7 +14,7 @@ length.not.valid=\u957F\u5EA6\u5FC5\u987B\u5728{min}\u5230{max}\u4E2A\u5B57\u7B2
 
 user.username.not.valid=* 2\u523020\u4E2A\u6C49\u5B57\u3001\u5B57\u6BCD\u3001\u6570\u5B57\u6216\u4E0B\u5212\u7EBF\u7EC4\u6210\uFF0C\u4E14\u5FC5\u987B\u4EE5\u975E\u6570\u5B57\u5F00\u5934
 user.password.not.valid=* 5-50\u4E2A\u5B57\u7B26
- 
+
 user.email.not.valid=\u90AE\u7BB1\u683C\u5F0F\u9519\u8BEF
 user.mobile.phone.number.not.valid=\u624B\u673A\u53F7\u683C\u5F0F\u9519\u8BEF
 user.login.success=\u767B\u5F55\u6210\u529F
@@ -22,13 +22,9 @@ user.notfound=\u8BF7\u91CD\u65B0\u767B\u5F55
 user.forcelogout=\u7BA1\u7406\u5458\u5F3A\u5236\u9000\u51FA\uFF0C\u8BF7\u91CD\u65B0\u767B\u5F55
 user.unknown.error=\u672A\u77E5\u9519\u8BEF\uFF0C\u8BF7\u91CD\u65B0\u767B\u5F55
 
-#\u6279\u91CF\u63D2\u5165\u7528\u6237\u9519\u8BEF\u4FE1\u606F
-user.import.excel.null=Excel\u6570\u636E\u4E3A\u7A7A\uFF0C\u8BF7\u6309\u7167\u5BFC\u5165\u6A21\u677F\u586B\u5199\u6570\u636E
-user.import.excel.data.null=Excel\u6570\u636E\u4E3A\u7A7A\uFF0C\u53EA\u6709\u6807\u9898\u884C\uFF0C\u8BF7\u6309\u7167\u5BFC\u5165\u6A21\u677F\u586B\u5199\u6570\u636E
-user.import.excel.filetype.error=\u6587\u4EF6\u4E0D\u662FExcel\u6587\u4EF6
-user.import.excel.file.error=\u6587\u4EF6\u540D\u4E3A\u7A7A\uFF0C\u6587\u4EF6\u4E3A\u7A7A
-user.import.excel.fileinput.error=\u83B7\u53D6Excel2003\u6D41\u9519\u8BEF
-user.import.excel.fileinputx.error=\u83B7\u53D6Excel2007\u6D41\u9519\u8BEF
+##\u6587\u4EF6\u4E0A\u4F20\u6D88\u606F
+upload.exceed.maxSize=\u4E0A\u4F20\u7684\u6587\u4EF6\u5927\u5C0F\u8D85\u51FA\u9650\u5236\u7684\u6587\u4EF6\u5927\u5C0F\uFF01<br/>\u5141\u8BB8\u7684\u6587\u4EF6\u6700\u5927\u5927\u5C0F\u662F\uFF1A{0}MB\uFF01
+upload.filename.exceed.length=\u4E0A\u4F20\u7684\u6587\u4EF6\u540D\u6700\u957F{0}\u4E2A\u5B57\u7B26
 ##\u6743\u9650
 no.permission=\u60A8\u6CA1\u6709\u6570\u636E\u7684\u6743\u9650\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458\u6DFB\u52A0\u6743\u9650 [{0}]
 no.create.permission=\u60A8\u6CA1\u6709\u521B\u5EFA\u6570\u636E\u7684\u6743\u9650\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458\u6DFB\u52A0\u6743\u9650 [{0}]
