--- a/joine-restapi/src/main/resources/i18n/messages.properties
+++ b/joine-restapi/src/main/resources/i18n/messages.properties
@@ -6,6 +6,7 @@ user.token.not.exists.error=\u7F3A\u5C11\u8BA4\u8BC1\u4FE1\u606F
 user.token.invalid.error=\u8BA4\u8BC1\u4FE1\u606F\u975E\u6CD5
 user.token.expired.error=\u672A\u8BA4\u8BC1\u6216\u8BA4\u8BC1\u4FE1\u606F\u8FC7\u671F
 request.method.not.support=\u8BF7\u6C42\u65B9\u6CD5\u4E0D\u652F\u6301
+request.format.not.support=\u8BF7\u6C42\u683C\u5F0F\u4E0D\u6B63\u786E
 request.success=\u8BF7\u6C42\u6210\u529F
 request.failure=\u8BF7\u6C42\u5931\u8D25
 operation.success=\u64CD\u4F5C\u6210\u529F
