小程序登录, 验证

--- a/joine-restapi/src/main/resources/i18n/messages.properties
+++ b/joine-restapi/src/main/resources/i18n/messages.properties
@@ -30,6 +30,8 @@ user.blocked=\u7528\u6237\u5DF2\u5C01\u7981\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\
 role.blocked=\u89D2\u8272\u5DF2\u5C01\u7981\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458
 user.logout.success=\u9000\u51FA\u6210\u529F
 
+wechat.userinfo.error=\u5FAE\u4FE1\u7528\u6237\u4FE1\u606F\u6821\u9A8C\u5931\u8D25
+
 
 length.not.valid=\u957F\u5EA6\u5FC5\u987B\u5728{min}\u5230{max}\u4E2A\u5B57\u7B26\u4E4B\u95F4
 
