国际化资源补全, 样式优化, js增强, 新增增减集List

--- a/joine-admin/src/main/resources/i18n/messages.properties
+++ b/joine-admin/src/main/resources/i18n/messages.properties
@@ -9,6 +9,7 @@ user.password.delete=\u5BF9\u4E0D\u8D77\uFF0C\u60A8\u7684\u8D26\u53F7\u5DF2\u88A
 user.blocked=\u7528\u6237\u5DF2\u5C01\u7981\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458
 role.blocked=\u89D2\u8272\u5DF2\u5C01\u7981\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458
 user.logout.success=\u9000\u51FA\u6210\u529F
+request.success=\u64CD\u4F5C\u6210\u529F
 
 length.not.valid=\u957F\u5EA6\u5FC5\u987B\u5728{min}\u5230{max}\u4E2A\u5B57\u7B26\u4E4B\u95F4
 
