--- a/joine-admin/src/main/resources/i18n/messages.properties
+++ b/joine-admin/src/main/resources/i18n/messages.properties
@@ -1,5 +1,26 @@
 #\u9519\u8BEF\u6D88\u606F
 not.null=* \u5FC5\u987B\u586B\u5199
+
+user.token.error=token\u9519\u8BEF
+user.token.not.exists.error=\u7F3A\u5C11\u8BA4\u8BC1\u4FE1\u606F
+user.token.invalid.error=\u8BA4\u8BC1\u4FE1\u606F\u975E\u6CD5
+required.params.missing.error=\u7F3A\u5C11\u5FC5\u8981\u4FE1\u606F
+user.token.expired.error=\u672A\u8BA4\u8BC1\u6216\u8BA4\u8BC1\u4FE1\u606F\u8FC7\u671F
+request.method.not.support=\u8BF7\u6C42\u65B9\u6CD5\u4E0D\u652F\u6301
+request.format.not.support=\u8BF7\u6C42\u683C\u5F0F\u4E0D\u6B63\u786E
+request.success=\u8BF7\u6C42\u6210\u529F
+request.failure=\u8BF7\u6C42\u5931\u8D25
+operation.success=\u64CD\u4F5C\u6210\u529F
+operation.failure=\u64CD\u4F5C\u5931\u8D25
+system.error=\u7CFB\u7EDF\u5F02\u5E38
+server.error=\u670D\u52A1\u5668\u9519\u8BEF
+not.found=\u8BF7\u6C42\u8D44\u6E90\u4E0D\u5B58\u5728
+forbidden=\u65E0\u6743\u9650\u8BBF\u95EE
+record.not.exists.or.version.not.match=\u8BB0\u5F55\u7248\u672C\u4E0D\u5B58\u5728\u6216\u4E0D\u5339\u914D
+parameter.not.null=\u53C2\u6570\u4E0D\u80FD\u4E3A\u7A7A
+set.collection.error=\u8BBE\u7F6E\u96C6\u5408\u5F02\u5E38
+get.property.error=\u83B7\u53D6\u5BF9\u8C61\u5C5E\u6027\u5F02\u5E38
+
 user.jcaptcha.error=\u9A8C\u8BC1\u7801\u9519\u8BEF
 user.not.exists=\u7528\u6237\u4E0D\u5B58\u5728/\u5BC6\u7801\u9519\u8BEF
 user.password.not.match=\u7528\u6237\u4E0D\u5B58\u5728/\u5BC6\u7801\u9519\u8BEF
@@ -9,7 +30,9 @@ user.password.delete=\u5BF9\u4E0D\u8D77\uFF0C\u60A8\u7684\u8D26\u53F7\u5DF2\u88A
 user.blocked=\u7528\u6237\u5DF2\u5C01\u7981\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458
 role.blocked=\u89D2\u8272\u5DF2\u5C01\u7981\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458
 user.logout.success=\u9000\u51FA\u6210\u529F
-request.success=\u64CD\u4F5C\u6210\u529F
+
+wechat.userinfo.error=\u5FAE\u4FE1\u7528\u6237\u4FE1\u606F\u6821\u9A8C\u5931\u8D25
+
 
 length.not.valid=\u957F\u5EA6\u5FC5\u987B\u5728{min}\u5230{max}\u4E2A\u5B57\u7B26\u4E4B\u95F4
 
