--- a/joine-restapi/src/main/resources/i18n/messages.properties
+++ b/joine-restapi/src/main/resources/i18n/messages.properties
@@ -8,11 +8,12 @@ required.params.missing.error=\u7F3A\u5C11\u5FC5\u8981\u4FE1\u606F
 user.token.expired.error=\u672A\u8BA4\u8BC1\u6216\u8BA4\u8BC1\u4FE1\u606F\u8FC7\u671F
 request.method.not.support=\u8BF7\u6C42\u65B9\u6CD5\u4E0D\u652F\u6301
 request.format.not.support=\u8BF7\u6C42\u683C\u5F0F\u4E0D\u6B63\u786E
-request.success=\u8BF7\u6C42\u6210\u529F
+request.success=\u64CD\u4F5C\u6210\u529F
 request.failure=\u8BF7\u6C42\u5931\u8D25
 operation.success=\u64CD\u4F5C\u6210\u529F
 operation.failure=\u64CD\u4F5C\u5931\u8D25
-system.error=\u7CFB\u7EDF\u5F02\u5E38
+system.warning=\u7CFB\u7EDF\u8B66\u544A
+system.error=\u64CD\u4F5C\u5931\u8D25
 server.error=\u670D\u52A1\u5668\u9519\u8BEF
 not.found=\u8BF7\u6C42\u8D44\u6E90\u4E0D\u5B58\u5728
 forbidden=\u65E0\u6743\u9650\u8BBF\u95EE
